# GameManager

./: .gitignore  README.md  pyproject.toml
game_manager/fs_storage/: fs_storage_manager.py
game_manager/graphic/: graphic_manager.py  renderer.py  window.py
game_manager/graphic/component/: button.py  graphical_component.py
game_manager/graphic/menu/: menu.py
game_manager/io/: mouse.py
game_manager/logic/: logic_manager.py  uid_object.py
game_manager/logic/entity/: entity.py  entity_moveable.py  tiled_entity.py
game_manager/logic/map/: map.py  tile.py  tiled_map.py
game_manager/messaging/: message_client.py  message_manager.py
game_manager/storage/: storage_manager.py
game_manager/tk/: tk_helpers.py  tk_image.py  tk_render_info.py  tk_renderer.py  tk_window.py  utils.py
